--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -28,6 +28,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src *  'unsafe-inline'; script-src *  'unsafe-inline'; media-src *">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -51,21 +52,19 @@
         <input type="text" name="txt-email-address" id="txt-email-address" value="">
         <label for="txt-password">Password</label>
         <input type="password" name="txt-password" id="txt-password" value="">
-        <fieldset data-role="controlgroup">                
-            <label><input type="checkbox" name="chk-keep-signed-in" id="chk-keep-signed-in"> Keep me signed in</label>
-        </fieldset>
         <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
-        <p class="mc-top-margin-1-5"><a href="#begin-password-reset-page">Can't access your account?</a></p>
     </div>
   </div><!-- /page -->
 
   <!-- page -->
   <div data-role="page" id="page-main-menu">
     <div data-role="header" data-theme="c">
+      <a href="#page-index" data-icon="gear" data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
         <h1>Peek</h1>
     </div><!-- /header -->
     <div role="main" class="ui-content">
-        <h2 class="mc-text-center">Main Menu</h2>
+        <h2 class="mc-text-center">Welcome</h2>
+        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">logout</a>
     </div><!-- /content -->
   </div><!-- /page --> 
 
