added logging out

--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
         <input type="text" name="txt-email-address" id="txt-email-address" value="">
         <label for="txt-password">Password</label>
         <input type="password" name="txt-password" id="txt-password" value="">
-        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="signin-btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
     </div>
   </div><!-- /page -->
 
@@ -64,7 +64,7 @@
     </div><!-- /header -->
     <div role="main" class="ui-content">
         <h2 class="mc-text-center">Welcome</h2>
-        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">logout</a>
+        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="signout-btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">logout</a>
     </div><!-- /content -->
   </div><!-- /page --> 
 
@@ -72,6 +72,7 @@
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/session.js"></script>
   <script type="text/javascript" src="js/signin-controller.js"></script>
+  <script type="text/javascript" src="js/signout-controller.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
