--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -52,19 +52,20 @@
         <input type="text" name="txt-email-address" id="txt-email-address" value="">
         <label for="txt-password">Password</label>
         <input type="password" name="txt-password" id="txt-password" value="">
-        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="signin-btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
     </div>
   </div><!-- /page -->
 
   <!-- page -->
   <div data-role="page" id="page-main-menu">
-    <div data-role="header" data-theme="c">
+    <div data-role="header" data-theme="b">
       <a href="#page-index" data-icon="gear" data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
         <h1>Peek</h1>
     </div><!-- /header -->
     <div role="main" class="ui-content">
-        <h2 class="mc-text-center">Welcome</h2>
-        <a href="#dlg-invalid-credentials" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">logout</a>
+        <h2 class="welcome-message">Welcome</h2>
+        <div id="list-house"></div>
+        <a data-transition="pop" data-position-to="window" id="signout-btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">logout</a>
     </div><!-- /content -->
   </div><!-- /page --> 
 
@@ -72,6 +73,8 @@
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/session.js"></script>
   <script type="text/javascript" src="js/signin-controller.js"></script>
+  <script type="text/javascript" src="js/signout-controller.js"></script>
+  <script type="text/javascript" src="js/welcome-page.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
