--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
 <body>
   <!-- page -->
   <div data-role="page" id="page-signin">
-    <div data-role="header" data-theme="c" data-position="fixed">
+    <div data-role="header" data-theme="b" data-position="fixed">
         <a href="#page-index" data-icon="home" data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
         <h1>Peek</h1>
     </div><!-- /header -->
@@ -64,7 +64,9 @@
     </div><!-- /header -->
     <div role="main" class="ui-content">
         <h2 class="welcome-message">Welcome</h2>
-        <div id="list-house"></div>
+        <div id="list-house">
+          
+        </div>
         <a data-transition="pop" data-position-to="window" id="signout-btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">logout</a>
     </div><!-- /content -->
   </div><!-- /page --> 
