--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -42,7 +42,6 @@
   <!-- page -->
   <div data-role="page" id="page-signin">
     <div data-role="header" data-theme="b" data-position="fixed">
-        <a href="#page-index" data-icon="home" data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
         <h1>Peek</h1>
     </div><!-- /header -->
     <div role="main" class="ui-content">
@@ -74,13 +73,18 @@
   <!-- page -->
   <div data-role="page" id="page-unlock-house">
     <div data-role='header' data-theme='b'>
-      <a href="#page-index" data-icon="gear" data-iconpos="notext" data-transition="slide" data-direction="reverse"></a>
         <h1>Peek</h1>
     </div><!-- /header -->
     <div data-role='main' class='ui-content'>
       <h1 class="welcome-message">Welcome </h1>
-
-      
+      <div class='ui-grid-a'>
+        <div class="ui-block-a">
+          <a data-transition='' data-position-to='window' id='camera-btn' class='ui-btn ui-btn-b'>take picture</a>
+        </div>
+        <div class="ui-block-b">
+          <a data-transition='' data-position-to='window' id='picture-submit-btn' class='ui-btn ui-btn-b'>send picture</a>
+        </div>
+      </div>
 
       <a data-transition="pop" data-position-to='window' id='back-btn' class='ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5'>back</a>
     </div>
