--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -32,6 +32,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+  <meta charset="UTF-16">
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="js/jquery/jquery.mobile-1.4.5.min.css">
   <script type="text/javascript" src="js/jquery-2.2.1.min.js"></script>
