--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -79,11 +79,7 @@
     </div><!-- /header -->
     <div data-role='main' class='ui-content'>
       <h2 class="welcome-message">Welcome </h2>
-      <div class='ui-grid-a'>
-        <div class="ui-block-a">
-          <a data-transition='' data-position-to='window' id='camera-btn' class='ui-btn ui-btn-b'>take picture</a>
-        </div>
-      </div>
+      <div id='pic-err' class="bi-invisible"></div>
       <div id="img-container">
         <img id="cameraPic" src=""></img>
     </div>
